apps/server/tests/fixtures/invalid-games/throwing-on-player/index.js
export function build() {
  return { meshes: [] }
}

export function addPlayer() {
  throw new Error('internal addPlayer error')
}
